# pulsefromheadmotion

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
include/: pfhm_lib.h  pfhm_lib.h~  sys_lib.h
lib/: libpfhmlib.dylib
src/: pfhmain.cpp
